tests/files/lexer_tests/should_fail/030.cmdr
// Illegal character in string (ascii 30)
var = '';